# redisservice

./: .gitignore  CMakeLists.txt  alg_config.json  alg_logConfig.json  conan-build-relwithdebinfo.bat  conanfile.py  readme.txt
include/: dataStructure.h  redisservice.h
src/: redisservice.cpp  version.rc.in
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: default_example.cpp  example.cpp  example.h
